--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,14 @@
+:root {
+  --color-gradient: linear-gradient(to right, #672280, #A626D3);
+}
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+html {
+  font-size: 62.5%;
+}
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
@@ -5,9 +16,61 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  font-size: 1.6rem;
 }
 
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
+}
+
+/* Header */
+header {
+  background: var(--color-gradient);
+  color: #fff;
+  padding: 2rem;
+}
+nav {
+  display: flex;
+  align-items: center;
+}
+.logo {
+  height: 6rem;
+  margin-right: .7rem;
+}
+nav p {
+  margin-left: auto;
+}
+
+/* Form */
+.form {
+  padding: 2rem 4rem;
+  display: grid;
+  grid-template: 40px 40px / 1fr 1fr;
+  gap: 1.7rem;
+}
+/* .input-control {
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  gap: 2rem;
+  margin-bottom: 4rem;
+} */
+
+input {
+  border: 1px solid #D5D4D8;
+  border-radius: .5rem;
+  box-shadow: 0 .1rem .3rem rgba(0, 0, 0, .1);
+  text-indent: .5rem;
+}
+
+.submit-btn {
+  grid-column: 1/-1;
+  font-size: 1.6rem;
+  background: var(--color-gradient);
+  color: #fff;
+  padding-block: 1rem;
+  border-color: transparent;
+  border-radius: .5rem;
+  cursor: pointer;
 }
